--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-axios": "^2.1.4",
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuejs-paginate": "^2.1.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
